--- a/starter/starter/style.css
+++ b/starter/starter/style.css
@@ -36,9 +36,7 @@ body {
 }
 
 /* GENERAL ELEMENTS */
-.hide {
-  display: none !important;
-}
+
 .section {
   padding: 15rem 3rem;
   border-top: 1px solid #ddd;
@@ -133,6 +131,7 @@ img {
 .nav__input, .nav__label1, .nav__label2 {
   display: none;
 }
+
 .closeButton {
   height: 3rem;
   width: 3rem;
@@ -794,21 +793,33 @@ a {
   .nav.sticky {
     padding: 0 2rem;
   }
-  .mob-nav__links {
+  .nav__links {
     position: fixed;
     top: 0;
     left: -100%;
-    background-color: black;
+    background-color: white;
     width: 100%;
     height: 100vh;
     flex-direction: column;
     align-items: center;
+    gap: 30px;
     justify-content: center;
     transition: 0.3s;
   }
 
-  #check:checked ~ .mob-nav__links {
+  #check:checked ~ .nav__links {
     left: 0;
+  }
+
+  #check:checked ~ .nav__label1 {
+    display: none;
+  }
+
+  #check:checked ~ .nav__label2 {
+    display: block;
+    font-size: 25px;
+    color: black;
+    z-index: 2;
   }
  
   .header__image {
@@ -823,6 +834,8 @@ a {
   p {
     font-size: 2rem;
   }
+
+
   .features__feature {
     display: grid;
     grid-template-columns: 1fr 3fr;
